<resources>
    <string name="app_name">JPNStudy</string>
    <string-array name="challengeLevels">
        <item>Multiple Choice</item>
        <item>Character Choice</item>
        <item>Key-in</item>
        <item>Mixed</item>
        <item>Weighted</item>
    </string-array>
    <string-array name="cardAmounts">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
    </string-array>
    <string name="action_starred">Star</string>
    <string name="action_mastered">Mastered</string>

    //CSV paths
    <string name="collin_dictionary">collins-dictionary.csv</string>

    //Intent keys
    <string name="mode_key">mode</string>
    <string name="card_front_key">cardFront</string>
    <string name="card_back_key">cardBack</string>
    <string name="amount_key">amount</string>
    <string name="card_key">card</string>

    //Home Menu
    <string name="learn_label">Learn</string>
    <string name="hone_label">Hone</string>
    <string name="ordeal_label">Ordeal</string>
    <string name="records_label">Records</string>
    <string name="settings_label">Settings</string>

    //Mode Menu

    <string name="amount_label">Amount</string>

    <string name="properties_front_label">Card Front</string>
    <string name="properties_back_label">Card Back</string>
    <string name="question_label">Question</string>
    <string name="answer_label">Answer</string>
    <string name="hiragana_label">Hiragana</string>
    <string name="english_label">English</string>
    <string name="kanji_label">Kanji</string>

    <string name="continue_label">Get Cards</string>

    <string name="same_card_error">Please choose different card sides</string>
    <string name="wrong_amount_error">Invalid amount</string>
    <string name="null_card_side_error">Please select the card properties</string>

    <string name="mode_menu_hone_title">Hone your skills</string>
    <string name="mode_menu_learn_title">Learn some cards</string>
    <string name="mode_menu_ordeal_title">Overcome an Ordeal</string>

    <string name="mode_menu_ordeal_label">Ordeal Type</string>
    <string name="mode_menu_ordeal_multiple_choice_description">Choose from 4 possible options</string>
    <string name="mode_menu_ordeal_character_choice_description">Choose from a set of possible characters</string>
    <string name="mode_menu_ordeal_key_in_description">Key in the correct answer</string>
    <string name="mode_menu_ordeal_mixed_description">Random assortment of Multiple Choice, Character Choice, and Key-in</string>
    <string name="mode_menu_ordeal_weighted_description">Assortment of Multiple Choice, Character Choice, and Key-in based on your familiarity of the card</string>

    //Flash Card Page
    <string name="flip_button">Flip</string>
    <string name="previous_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="mode_hone_title">HONE!</string>
    <string name="mode_learn_title">LEARN!</string>
    <string name="done_button">Finish</string>
    <string name="done_dialog_title">Done?</string>
    <string name="again_dialog_button">Encore!</string>
    <string name="return_home_dialog_button">Retreat.</string>

    //Ordeal Page
    <string name="mode_ordeal_title">ORDEAL!</string>
    <string name="mode_ordeal_backspace_button">Delete</string>
    <string name="mode_ordeal_continue_button">Continue</string>
    <string name="mode_ordeal_confirm_button">Confirm</string>
    <string name="mode_ordeal_submit_button">Submit</string>
    <string name="mode_ordeal_score_text">Cleared!</string>
    <string name="mode_ordeal_correct_answer_title">Ordeal Cleared!</string>
    <string name="mode_ordeal_correct_answer_message">Ordeal Cleared!</string>
    <string name="mode_ordeal_wrong_answer_title">Ordeal Failed</string>
    <string name="mode_ordeal_wrong_answer_message">Solution:</string>
    <string name="mode_ordeal_ordeal_dialog_button">Got it!</string>

    //Settings Page
    <string name="settings_default_database_warning">"Are you sure you want to revert to the default data set?"</string>
    <string name="settings_default_database_title">Warning</string>
    <string name="settings_default_database_confirm_button">Proceed</string>
    <string name="settings_default_database_cancel_button">Cancel</string>
    <string name="settings_add_term_button">Add Term</string>
    <string name="settings_edit_term_button">Edit Term</string>
    <string name="settings_clear_database_button">Clear Database</string>
    <string name="settings_default_database_button">Default Database</string>

    <string name="settings_loading_text_initial_load">Clearing Database...</string>
    <string name="settings_loading_text_database_reading">Loading Cards into Database...</string>

</resources>
