<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pages.ModeMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/flash_card_menu_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/amount_label"
            android:textSize="@dimen/sub_header_text_size" />

        <Spinner
            android:id="@+id/flash_card_menu_amount_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/cardAmounts"
            android:spinnerMode="dialog"
            android:textAlignment="center" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mode_menu_card_front_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/properties_front_label"
                android:textSize="@dimen/sub_header_text_size" />

            <TextView
                android:id="@+id/mode_menu_card_back_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/properties_back_label"
                android:textSize="@dimen/sub_header_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/flash_card_menu_card_front_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/flash_card_menu_english_front_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCardFrontRadioButtonClick"
                    android:text="@string/english_label"
                    android:textSize="@dimen/button_text_size" />

                <RadioButton
                    android:id="@+id/flash_card_menu_hiragana_front_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCardFrontRadioButtonClick"
                    android:text="@string/hiragana_label"
                    android:textSize="@dimen/button_text_size" />

                <RadioButton
                    android:id="@+id/flash_card_menu_kanji_front_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCardFrontRadioButtonClick"
                    android:text="@string/kanji_label"
                    android:textSize="@dimen/button_text_size" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/flash_card_menu_card_back_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/flash_card_menu_english_back_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCardBackRadioButtonClick"
                    android:text="@string/english_label"
                    android:textSize="@dimen/button_text_size" />

                <RadioButton
                    android:id="@+id/flash_card_menu_hiragana_back_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCardBackRadioButtonClick"
                    android:text="@string/hiragana_label"
                    android:textSize="@dimen/button_text_size" />

                <RadioButton
                    android:id="@+id/flash_card_menu_kanji_back_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCardBackRadioButtonClick"
                    android:text="@string/kanji_label"
                    android:textSize="@dimen/button_text_size" />
            </RadioGroup>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/flash_card_menu_ordeal_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/flash_card_menu_ordeal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/mode_menu_ordeal_label"
            android:textSize="@dimen/sub_header_text_size" />

        <Spinner
            android:id="@+id/flash_card_menu_ordeal_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ordeal_character_button_height"
            android:entries="@array/challengeLevels"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/flash_card_menu_ordeal_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:scrollHorizontally="false"
            android:textSize="@dimen/flash_card_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/flash_card_menu_continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:text="@string/continue_label"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>